CTA section under development. Text section alignment problem is yet to resolve.

--- a/learning/TOP/landing-page/css/style.css
+++ b/learning/TOP/landing-page/css/style.css
@@ -172,10 +172,25 @@ div.hero-text h1 {
     background-color: #3882f6;
     color: #F9FAF8;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
 }
 
-/* .cta div button {
+.cta div div {
     flex: 1;
-} */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta div button {
+    width: 80px;
+    height: 30px;
+    color: #F9FAF8;
+    font-weight: bold;
+    background-color: #3882f6;
+    border: 2px solid #e5e7eb;
+    border-radius: 5px;
+}
